# linux-driver-management

./: .gitignore  LdmBluetoothDevice.html  LdmDMIDevice.html  LdmDevice.html  LdmGLXManager.html  LdmGPUConfig.html  LdmHIDDevice.html  LdmManager.html  LdmModalias.html  LdmModaliasPlugin.html  LdmPCIDevice.html  LdmPlugin.html  LdmProvider.html  LdmUSBDevice.html  LdmWifiDevice.html  Makefile.am  NOTES  PLAN.md  README.md  annotation-glossary.html  api-index-full.html  configure.ac  deprecated-api-index.html  devices.html  gen_docs.sh  gl-driver-switch  index.html  linux-driver-management.devhelp2  linux-driver-management.html  meson.build  meson_options.txt  mkgobuildy.sh  mkrelease.sh  object-tree.html  plugins.html  record_usb.sh  test.sh  update_format.sh
compat/: meson.build
data/: 99-ldm.conf.in  Xsetup.in  ldm-session-init.desktop.in  meson.build
docs/: linux-driver-management.sgml  linux-driver-management.types  meson.build
examples/: basic.c  dnf-integration.py  dnf.conf  find-bt.py  hotplug.c  list-usb.py  list.vala
man/: ldm-session-init.1  ldm-session-init.1.html  ldm-session-init.1.md  linux-driver-management.1  linux-driver-management.1.html  linux-driver-management.1.md  meson.build  mkmodalias.1  mkmodalias.1.html  mkmodalias.1.md  mkmodaliases.1  mkmodaliases.1.html  mkmodaliases.1.md
src/: device.c  device.h  display-manager.c  display-manager.h  gpu.h  ldm.h  main.c  meson.build  pci.c  pci.h  scan-devices.c  scanner.c  scanner.h  util.c  util.h
src/cli/: cli.h  configure.c  main.c  meson.build  status.c  version.c
src/detect/: main.c
src/dm/: display-manager.c  display-manager.h  gdm.c  lightdm.c
src/drivers/: gpu.c
src/include/: atomics.h  ldm.h  util.h
src/legacy-lib/: device.c  device.h  ldm-private.h  ldm.h  meson.build  pci.h  scanner.c  scanner.h  usb.h  util.c  util.h
src/legacy-lib/dm/: display-manager.c  display-manager.h  gdm.c  lightdm.c
src/legacy-lib/drivers/: gpu.c
src/legacy-lib/scan/: pci.c  usb.c
src/lib/: Ldm-1.0.metadata  bluetooth-device.c  bluetooth-device.h  device-pci.c  device-usb.c  device.c  device.h  dmi-device.c  dmi-device.h  driver.c  driver.h  glx-manager.c  glx-manager.h  gpu-config.c  gpu-config.h  hid-device.c  hid-device.h  ldm-enums.c.template  ldm-enums.h.template  ldm-private.h  ldm.h  manager-plugins.c  manager-private.h  manager.c  manager.h  meson.build  modalias.c  modalias.h  pci-device.c  pci-device.h  pci.h  plugin.c  plugin.h  provider.c  provider.h  sym.map  usb-device.c  usb-device.h  usb.h  util.h  (+2 more)
src/lib/drivers/: modalias-driver.c  modalias-driver.h
src/lib/plugins/: modalias-plugin.c  modalias-plugin.h
src/lib/scan/: pci.c  usb.c
src/manager/: manager.c
src/monitor/: main.c  meson.build  monitor.c  monitor.h
src/scan/: pci.c
src/session-init/: main.c  meson.build
src/tools/: meson.build  mkmodalias.c  mkmodaliases.c
tests/: check-gpu-config.c  check-manager.c  check-modalias.c  check-plugins.c  check-usb.c  meson.build
tests/data/: blueYeti.umockdev  bluetoothUSB.umockdev  brotherPrinter.umockdev  corsairk70r.umockdev  desktop-nvidia-intel.umockdev  desktop-nvidia980-intel.umockdev  hpPrinter.umockdev  ipodtouchgen5.umockdev  logitechg403.umockdev  logitechg502.umockdev  logitechm305.umockdev  nvidia-340-glx-driver.modaliases  nvidia-glx-driver.modaliases  nvidia1060.umockdev  optimus1050m.umockdev  optimus765m.umockdev  razer-drivers.modaliases  razer-ornata-chroma.umockdev  razerMamba.umockdev  samsungPrinter.umockdev  smartcard.umockdev  wifi.umockdev  xboxone.umockdev  yubikey4.umockdev  yubikey_neo.umockdev  yubikeyu2f.umockdev
