option('with-gl-driver-switch-compat', type: 'boolean', value: false, description: 'Enable (Solus specific) gl-driver-switch compatability')
option('with-modalias-dir', type: 'string', description: 'Where to find the modalias directory')
option('with-tests', type: 'combo', choices: ['auto', 'yes', 'no'], value: 'auto')
option('with-docs', type: 'boolean', value: true, description: 'Enable building of documentation')
option('with-tools', type: 'combo', choices: ['auto', 'yes', 'no'], value: 'auto', description: 'Enable support tooling')
option('with-autostart-dir', type: 'string', description: 'Path to the XDG autostart directory')